[package]
name = "nukesimul"
version = "0.2.0"
edition = "2021"
description = "북한 핵실험장 수평갱도 3D 시뮬레이션 게임"

[[bin]]
name = "nukesimul"
path = "src/main.rs"

[dependencies]
# Bevy 게임 엔진 (순수 Rust 3D)
bevy = { version = "0.14", features = ["dynamic_linking"] }
# 강체 물리 (Rapier3D)
bevy_rapier3d = { version = "0.27", features = ["debug-render-3d"] }
# 수학
rand = "0.8"
# 직렬화
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
